<resources>
    <string name="app_name">Glide Stock Take</string>
    <string name="download_dispatch">Download Despatch\nInformation</string>
    <string name="upload_dispatch">Upload Completed\nDespatch(s)</string>
    <string name="download_stock">DOWNLOAD STOCK\nINFORMATION</string>
    <string name="upload_stock">UPLOAD STOCK\nINFORMATION</string>
    <string name="no_despatch">No despatches downloaded</string>
    <string name="remove_dispatch">REMOVE ALL DATA</string>
    <string name="upload_modified_stock">UPLOAD MODIFIED\nSTOCK ONLY</string>
    <string name="home">Home</string>
    <string name="despatch">Despatch</string>
    <string name="delete_zones">Delete Zones</string>
    <string name="start_stock_take">Start Stock Take</string>
    <string name="staff">Change Staff</string>
    <string name="downloading">Downloading Stock Information...</string>
    <string name="uploading">Uploading Stock Information...</string>
    <string name="removing">Removing Stock Information...</string>
    <string name="upload_success">Successfully Uploaded.</string>
    <string name="remove_success">Successfully Removed.</string>
    <string name="remove_failed">Remove Failed.</string>
    <string name="view_crate">VIEW CRATE</string>
    <string name="cannot_deliver">CANNOT DELIVER</string>
    <string name="network_error">Network Error</string>
    <string name="processing">Processing...</string>
    <string name="signing_in">Signing In...</string>
    <string name="db_error">Database Error</string>
    <string name="remove_stock">Remove Stock</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="no_completed_despatch">No Completed Zone</string>
    <string name="outlet_complete_format" formatted="false">Outlet completed %d out of %d</string>
    <string name="tier_space_format">SPACE LEFT: %s units</string>
    <string name="login_failed">Login Failed.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="download_accomplished">Download Accomplished.</string>
    <string name="staff_select">STAFF SELECT</string>
    <string name="search_title_id">SEARCH TITLE ID</string>
    <string name="select_new_location">Please select new location.</string>
    <string name="input_qtys">Please fill the Pallets, Boxes and Loose.</string>
    <string name="no_stock_exists">No stock exists</string>
    <string name="choose_staff">Please choose a Staff.</string>
    <string name="other_locations">Other Locations</string>

    <string name="clone_despatch">DESPATCH:</string>
    <string name="clone_run">RUN:</string>
    <string name="clone_driver">DRIVER:</string>
    <string name="clone_route">ROUTE:</string>
    <string name="clone_reg">REG:</string>

    <string name="title_despatch_fragment">Despatches Ready for Delivery</string>

    <string name="msg_ask_remove_despatch">Are you sure you want to remove this despatch?</string>
    <string name="msg_ask_remove_datas">Are you sure you want to remove all datas?</string>

    <string name="hint_name">Name</string>
    <string name="hint_username">UserName</string>
    <string name="hint_access_id">AccessID</string>
    <string name="hint_password">Password</string>
    <string name="hint_title_id">Title ID</string>
    <string name="hint_pallets">Pallets:</string>
    <string name="hint_boxes">Boxes:</string>
    <string name="hint_loose">Loose:</string>
    <string name="hint_est">Est:</string>
    <string name="hint_last_stocktake">Last:</string>
    <string name="hint_stock_received">Received:</string>
    <string name="hint_box_qty">Qty/box:</string>
    <string name="hint_new_total">New total:</string>
    <string name="hint_move_location">Move location:</string>
    <string name="hint_issue">Comments:</string>
    <string name="hint_warehouse">Warehouse</string>
    <string name="hint_zone">Zone</string>
    <string name="hint_bay">Bay</string>
    <string name="btn_login">Login</string>
    <string name="btn_full">FULL</string>
    <string name="btn_part">PART</string>
    <string name="btn_none">NONE</string>
    <string name="btn_missing">MISSING</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_complete">COMPLETE</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_update">UPDATE</string>
    <string name="qty_required">Qty Required.</string>

    <array name="outlet_reason">
        <item>Closed</item>
        <item>No Access Closed</item>
        <item>Out of Hours Closed</item>
        <item>Refurbishment Closed</item>
        <item>Site has Closed Down</item>
        <item>Display not Accessible on this visit</item>
        <item>Display missing</item>
        <item>Display broken</item>
        <item>Display temporarily Put Away</item>
        <item>Could Not Locate Site</item>
        <item>Not Enough Time to Complete</item>
        <item>Delivered</item>
    </array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
