<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:actionLayout="@layout/drawer_menu_item"/>

        <item
            android:id="@+id/nav_delete_zone"
            android:title="@string/delete_zones"
            android:actionLayout="@layout/drawer_menu_item"/>

        <item
            android:id="@+id/nav_start_stock_take"
            android:title="@string/start_stock_take"
            android:actionLayout="@layout/drawer_menu_item"/>

        <item
            android:id="@+id/nav_staff"
            android:title="@string/staff"
            android:actionLayout="@layout/drawer_menu_item"/>

    </group>

</menu>
