<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/total_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextBranchItem"
                        android:text="TITLE ID - "/>

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        style="@style/TextBranchItem"
                        android:textColor="@color/colorGreen"
                        android:text="In Stock"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="TITLE STOCK GOES HERE"/>

                <TextView
                    android:id="@+id/tv_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="CUSTOMER"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_delete"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="@string/hint_pallets"/>

                <TextView
                    android:id="@+id/tv_last_pallets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="25"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="@string/hint_boxes"/>

                <TextView
                    android:id="@+id/tv_last_boxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="25"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="@string/hint_loose"/>

                <TextView
                    android:id="@+id/tv_last_loose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextBranchItem"
                    android:text="25"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_pallets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_pallets"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edt_boxes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_boxes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edt_loose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_loose"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:text="@string/hint_est"/>

            <TextView
                android:id="@+id/tv_est_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:layout_marginLeft="8dp"
                android:text="62,255"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/hint_last_stocktake"/>

            <TextView
                android:id="@+id/tv_last_stocktake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:layout_marginLeft="8dp"
                android:text="2017-01-12"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:text="@string/hint_box_qty"/>

            <TextView
                android:id="@+id/tv_box_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:layout_marginLeft="8dp"
                android:text="62,255"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/hint_new_total"/>

            <TextView
                android:id="@+id/tv_new_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBranchItem"
                android:textColor="@color/colorGreen"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/TextBranch"
            android:text="@string/hint_move_location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/warehouse_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <Spinner
                android:id="@+id/zone_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <Spinner
                android:id="@+id/bay_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextBranch"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hint_issue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/issue_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonUpdate"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_update"/>
</LinearLayout>