<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/despatch_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/button_bg_download">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/title_despatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextDefault"
                    android:text="@string/clone_despatch"/>
                <TextView
                    android:id="@+id/tv_despatch_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    style="@style/TextDefault"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/title_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextDefault"
                    android:text="@string/clone_run"/>
                <TextView
                    android:id="@+id/tv_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    style="@style/TextDefault"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/title_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextDefault"
                    android:text="@string/clone_driver"/>
                <TextView
                    android:id="@+id/tv_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    style="@style/TextDefault"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_outlet_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextDefault"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="delete"
                style="@style/ButtonRemove"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            />

    </RelativeLayout>

</LinearLayout>